argocd_applications/monitoring/loki/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: loki
  namespace: monitoring
  labels:
    app: loki
spec:
  serviceName: loki
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      tolerations:
      - key: role
        operator: Equal
        value: platform
        effect: NoSchedule
      containers:
      - name: loki
        image: harbor.k8s.local/dockerhub-cache/grafana/loki:3.6.7
        args:
          - '-config.file=/etc/loki/loki-config.yaml'
          - '-target=all'
        ports:
        - containerPort: 3100
          name: http
        - containerPort: 9096
          name: grpc
        volumeMounts:
        - name: loki-config
          mountPath: /etc/loki/
        - name: loki-data
          mountPath: /loki
        resources:
          requests:
            cpu: 10m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 1Gi
        readinessProbe:
          httpGet:
            path: /ready
            port: 3100
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /ready
            port: 3100
          initialDelaySeconds: 30
          periodSeconds: 15
      volumes:
      - name: loki-config
        configMap:
          name: loki-config
      - name: loki-data
        emptyDir: {}
