argocd_applications/monitoring/loki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: monitoring
  labels:
    app: loki
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "3100"
spec:
  selector:
    app: loki
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 3100
    targetPort: 3100
  - name: grpc
    protocol: TCP
    port: 9096
    targetPort: 9096
